exports[`Onboarding should render different components 1`] = `
<div
  className="wizard welcome">
  <div
    className="wizard-main">
    <img
      alt="logo"
      src="test-file-stub" />
    <h1 />
  </div>
  <button
    className="coz-btn coz-btn--regular wizard-button"
    onClick={[Function]}
    role="button" />
</div>
`;

exports[`Onboarding should render different components 2`] = `
<div
  className="wizard">
  <div
    className="wizard-main">
    <p />
    <input
      onChange={undefined}
      placeholder={undefined}
      type="text"
      value={undefined} />
    <p />
  </div>
  <button
    className="coz-btn coz-btn--regular wizard-button"
    onClick={undefined}
    role="button" />
</div>
`;
